apps/pantrywise/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: pantrywise
  labels:
    app: pantrywise-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pantrywise-server
  template:
    metadata:
      labels:
        app: pantrywise-server
    spec:
      containers:
        - name: server
          image: registry.registry.svc:5000/pantrywise-server:2ce0da2
          command: ["/bin/sh", "-c"]
          args:
            - >-
              npx prisma db push --accept-data-loss &&
              node dist/server.js
          ports:
            - containerPort: 3001
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
