apps/pantrywise/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: pantrywise
  labels:
    app: pantrywise-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pantrywise-web
  template:
    metadata:
      labels:
        app: pantrywise-web
    spec:
      automountServiceAccountToken: false
      containers:
        - name: web
          image: registry.registry.svc:5000/pantrywise-web:5873801
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
