apps/pantrywise/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pantrywise
  labels:
    app: pantrywise-postgres
spec:
  type: ClusterIP
  selector:
    app: pantrywise-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
