apps/pantrywise/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: pantrywise
  labels:
    app: pantrywise-redis
spec:
  type: ClusterIP
  selector:
    app: pantrywise-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
