apps/pantrywise/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: pantrywise
  labels:
    app: pantrywise-server
spec:
  type: ClusterIP
  selector:
    app: pantrywise-server
  ports:
    - name: http
      port: 3001
      targetPort: 3001
